Fix the bug: horizontal scroll bar is shown in window of small size.

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -87,7 +87,6 @@ header h2 {
   line-height: 1.3;
   width: 540px;
   letter-spacing: 1px;
-  margin-left: 40px;
 }
 
 .inner {
